--- a/index.html
+++ b/index.html
@@ -49,8 +49,66 @@
                     <button>Англия</button>
                 </div>
             </div>
+        </div>
+            <div class="card-container-main">
             <div class="france">
 
+                <div class="card-container">
+                    <div class="card">
+                        <img src="images/03.png" alt="Охота Амура">
+                        <span>Марсель Руссо</span>
+                        <h3>Охота Амура</h3>
+                        <span>Холст, масло (50х80)</span>
+                        <div class="price"></div>
+                        <button>В корзину</button>
+                    </div>
+                    <div class="card">
+                        <img src="images/03.png" alt="Охота Амура">
+                        <span>Марсель Руссо</span>
+                        <h3>Охота Амура</h3>
+                        <span>Холст, масло (50х80)</span>
+                        <div class="price"></div>
+                        <button>В корзину</button>
+                    </div>
+                    <div class="card">
+                        <img src="images/03.png" alt="Охота Амура">
+                        <span>Марсель Руссо</span>
+                        <h3>Охота Амура</h3>
+                        <span>Холст, масло (50х80)</span>
+                        <div class="price"></div>
+                        <button>В корзину</button>
+                    </div>
+                </div>
+                        
+                <div class="card-container">
+                    <div class="card">
+                        <img src="images/03.png" alt="Охота Амура">
+                        <span>Марсель Руссо</span>
+                        <h3>Охота Амура</h3>
+                        <span>Холст, масло (50х80)</span>
+                        <div class="price"></div>
+                        <button>В корзину</button>
+                    </div>
+                    <div class="card">
+                        <img src="images/03.png" alt="Охота Амура">
+                        <span>Марсель Руссо</span>
+                        <h3>Охота Амура</h3>
+                        <span>Холст, масло (50х80)</span>
+                        <div class="price"></div>
+                        <button>В корзину</button>
+                    </div>
+                    <div class="card">
+                        <img src="images/03.png" alt="Охота Амура">
+                        <span>Марсель Руссо</span>
+                        <h3>Охота Амура</h3>
+                        <span>Холст, масло (50х80)</span>
+                        <div class="price"></div>
+                        <button>В корзину</button>
+                    </div>
+                </div>
+            </div>    
+                    </div>
+                </div>
             </div>
         </div>
 
