--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header class="header">
+<div class="container">
         <div class="header-container">
             <div class="header-left">
                 <div class="logo-container">
@@ -27,10 +28,12 @@
                 </a>
             </div>
         </div>
+</div>
     </header>
     <main>
 <!--hero-->
         <div class="hero">
+<div class="container">
             <div class="hero-text">
                 
                 <h1>Реплики картин от <span class="logo-text">Ink. House</span></h1>
@@ -38,6 +41,7 @@
                 <button>Продукция</button>
             </div>
             <img src="images/hero.png" alt="" width="540px" height="621px">
+</div>        
         </div>
 <!--catalog-->
         <div class="catalog">
